[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websockets = "0.3.0"
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
chrono = "0.4.31"
rsa = "0.9.6"

[[bin]]
name ="server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"